tests/snapshots/tui_render__dashboard_120x32.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            ┌ OVERVIEW ────────────────────────────────────────────────────────┐│ LIVE STATUS
│ > Dashboard           │Host        zbook                                                 ││ * idle
│   System +            │OS          Ubuntu 24.04 24.04                                    ││
│   Network +           │Kernel      6.8.0-88-generic                                      ││RESOURCES
│   Discovery +         └──────────────────────────────────────────────────────────────────┘│CPU       ####......   42.0
│   Scanner -           ┌ HEALTH ──────────────────────────────────────────────────────────┐│RAM       #####.....   51.0
│   Security x          │ System    +    Routes    +                                       ││Network   -> 12.4 MB  -> 1.
│   Monitor |           │ CPU       +    DNS       +                                       ││
│   Doctor x            │ Memory    +    Internet  +                                       ││Data
│   Reports             │ Storage   !    Firewall  !                                       ││System      now
│   Snapshots -         │ GPU       +    Processes +                                       ││Interfaces  now
│   Settings            │ Network   +    Security  x                                       ││Connectivitynow
│                       │                                                                  ││Security    now
│ 88/100 (B)            │ Overall Health  88/100  grade B                                  ││
│ Security score        └──────────────────────────────────────────────────────────────────┘│
│                       ┌ NETWORK ─────────────────────────────────────────────────────────┐│
│                       │Interface   wlp3s0                                                ││
│                       │Address     192.168.1.20/24                                       ││
│                       └──────────────────────────────────────────────────────────────────┘│
│                       ┌ RESOURCES ───────────────────────────────────────────────────────┐│
│                       │CPU       #####.......   42.0%                                    ││
│                       │RAM       ######......   51.0%                                    ││
│                       └──────────────────────────────────────────────────────────────────┘│
│                       ┌ FINDINGS ────────────────────────────────────────────────────────┐│
│                       │ > x ERROR  Host firewall appears disabled                        ││
│                       │   - INFO  SSH is listening on all interfaces                     ││
│                       │                                                                  ││
│                       │                                                                  ││
│                       │                                                                  ││
│                       └──────────────────────────────────────────────────────────────────┘│
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Tab next screen   Ctrl+P Palette
