tests/snapshots/tui_render__network_tab_network_connections.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Interfaces   Routes   DNS   Connectivity   Latency   Trace > Conn
│   Dashboard         ┌  Connections  ─────────────────────────────────────────────────────────────┐
│   System +          │Protocol Local             Remote           State         Process    PID    │
│ > Network +         │> TCP    127.0.0.1:3000    *:*              LISTEN        code       1032   │
│   Discovery +       │TCP      192.168.1.20:443  104.18.32.7:443  ESTABLISHED   firefox    2134   │
│   Scanner -         │                                                                            │
│   Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Tab next screen   Ctrl+P Palette
