tests/snapshots/tui_render__network_tab_network_dns.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Interfaces   Routes > DNS   Connectivity   Latency   Trace   Conn
│   Dashboard         ┌ DNS ───────────────────────────────────────────────────────────────────────┐
│   System +          │ Resolver      1.1.1.1, 192.168.1.1                                         │
│ > Network +         │ source: /etc/resolv.conf                                                   │
│   Discovery +       │ search: lan                                                                │
│   Scanner -         │ Name          example.com                                                  │
│   Security x        │                                                                            │
│   Monitor |         └────────────────────────────────────────────────────────────────────────────┘
│   Doctor x          ┌ Result ────────────────────────────────────────────────────────────────────┐
│   Reports           │Loading...                                                                  │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Tab next screen   Ctrl+P Palette
